--- a/main.yml
+++ b/main.yml
@@ -93,6 +93,7 @@ approval:
   api:
     versions:
       - v1
+    isBeta: true
   deployment_repo: https://github.com/RedHatInsights/approvals-frontend-deploy.git
   frontend:
     module:
@@ -109,6 +110,7 @@ automation-analytics:
   api:
     versions:
       - v1
+    isBeta: true
   deployment_repo: https://github.com/RedHatInsights/tower-analytics-frontend-build.git
   productId: Ansible Automation Analytics
   frontend:
@@ -159,6 +161,7 @@ catalog:
   api:
     versions:
       - v1
+    isBeta: true
   channel: '#insights-catalog'
   deployment_repo: https://github.com/RedHatInsights/catalog-static-deploy
   frontend:
@@ -230,6 +233,7 @@ compliance:
   api:
     versions:
       - v1
+    isBeta: true
   deployment_repo: https://github.com/RedHatInsights/compliance-frontend-build
   frontend:
     section: security
@@ -257,6 +261,7 @@ cost-management:
   api:
     versions:
       - v1
+    isBeta: true
   channel: '#koku'
   deployment_repo: https://github.com/RedHatInsights/cost-management-build
   productId: Red Hat Cost Management
@@ -691,6 +696,7 @@ patch:
   api:
     versions:
       - v1
+    isBeta: true
   channel: '#team-patchman'
   deployment_repo: https://github.com/RedHatInsights/patchman-ui-build
   frontend:
@@ -822,6 +828,7 @@ ruledev:
   api:
     versions:
       - v1
+    isBeta: true
     tags:
       - value: "experimental"
         title: "Experimental API"
@@ -854,6 +861,7 @@ sources:
   api:
     versions:
       - v1
+    isBeta: true
   channel: '#sources'
   deployment_repo: https://github.com/RedHatInsights/sources-ui-deploy
   frontend:
