make app services frontend beta (#489)
* make app services frontend beta

* revert removals

* add rule for frontend beta

--- a/main.yml
+++ b/main.yml
@@ -657,6 +657,7 @@ application-services:
   deployment_repo: https://github.com/RedHatInsights/rhosak-dashboard-build
   frontend:
     title: Application Services
+    isBeta: true
     paths:
       - /application-services
     sub_apps:
