sync prod-beta with stuff in ci-beta

--- a/main.yml
+++ b/main.yml
@@ -1,3 +1,19 @@
+access-requests:
+  title: Access Requests
+  description: Frontend for Red Hat employee to request access to customer account
+  deployment_repo: https://github.com/RedHatInsights/access-requests-build
+  api:
+    versions:
+      -v1
+  frontend:
+    module:
+      appName: access-requests
+      scope: accessRequests
+      module: ./RootApp
+    title: Access Requests
+    paths:
+      - /internal/access-requests
+
 advisor:
   title: Advisor
   api:
@@ -6,8 +22,10 @@ advisor:
     apiName: insights
   channel: '#advisor'
   deployment_repo: https://github.com/RedHatInsights/insights-advisor-frontend-build
+  productId: Red Hat Insights
   frontend:
     module: advisor#./RootApp
+    section: operations
     paths:
       - /insights/advisor
     sub_apps:
@@ -20,13 +38,13 @@ advisor:
   source_repo: https://github.com/RedHatInsights/insights-advisor-frontend
 
 ansible:
-  title: Red Hat Ansible Automation Platform
+  title: Ansible Automation Platform
   frontend:
     sub_apps:
-      - id: automation-analytics
-        default: true
       - id: automation-hub
+        default: true
       - id: catalog
+      - id: automation-analytics
   top_level: true
 
 api-docs:
@@ -58,12 +76,14 @@ applications:
           method: isEntitled
           args:
             - insights
+        reload: applications/advisor
       - id: cost-management
         title: Cost Management
         permissions:
           method: isEntitled
           args:
             - cost_management
+        reload: applications/cost-management
     paths:
       - /settings/applications
   source_repo: https://github.com/RedHatInsights/settings-frontend
@@ -86,33 +106,39 @@ approval:
   source_repo: https://github.com/RedHatInsights/approval-ui
 
 automation-analytics:
-  title: Automation Analytics
+  title: Analytics
   api:
     versions:
       - v1
     isBeta: true
   deployment_repo: https://github.com/RedHatInsights/tower-analytics-frontend-build.git
+  productId: Ansible Automation Analytics
   frontend:
+    section: insights
     paths:
       - /ansible
       - /ansible/automation-analytics
     sub_apps:
-      - id: clusters
-        title: Clusters
-        default: true
+      - id : automation-calculator
+        title: Automation Calculator
       - id: organization-statistics
         title: Organization Statistics
       - id: job-explorer
         title: Job Explorer
+      - id: clusters
+        title: Clusters
+        default: true
       - id: notifications
         title: Notifications
-      - id: automation-calculator
-        title: Automation Calculator
   source_repo: https://github.com/RedHatInsights/tower-analytics-frontend
 
 automation-hub:
   title: Automation Hub
+  api:
+    versions:
+      - v3
   deployment_repo: https://github.com/RedHatInsights/ansible-hub-ui-build
+  productId: Ansible Automation Hub
   frontend:
     paths:
       - /ansible/automation-hub
@@ -124,6 +150,10 @@ automation-hub:
         title: Partners
       - id: my-namespaces
         title: My namespaces
+      - id: repositories
+        title: Repo Management
+      - id: token
+        title: Connect to Hub
   source_repo: https://github.com/ansible/ansible-hub-ui
 
 catalog:
@@ -172,6 +202,32 @@ chrome:
   deployment_repo: https://github.com/RedHatInsights/insights-chrome-build
   source_repo: https://github.com/RedHatInsights/insights-chrome
 
+cloud-tutorials:
+  title: Cloud Tutorials
+  description: Cloud Tutorials for Open Data Hub
+  deployment_repo: https://github.com/cloudmosaic/cloud-tutorials-frontend-build
+  api:
+    versions:
+      -v1
+  frontend:
+    title: Cloud Tutorials
+    paths:
+      - /mosaic/cloud-tutorials
+
+commit-tracker:
+  title: Commit Tracker
+  description: The Commit Tracker Tool
+  disabled_on_prod: true
+  deployment_repo: https://github.com/RedHatInsights/commit-tracker-frontend-build
+  api:
+    versions:
+      -v1
+  frontend:
+    title: Commit Tracker
+    paths:
+      - /internal
+      - /internal/commit-tracker
+
 compliance:
   title: Compliance
   api:
@@ -180,6 +236,7 @@ compliance:
     isBeta: true
   deployment_repo: https://github.com/RedHatInsights/compliance-frontend-build
   frontend:
+    section: security
     module: compliance#./RootApp
     paths:
       - /insights/compliance
@@ -207,6 +264,7 @@ cost-management:
     isBeta: true
   channel: '#koku'
   deployment_repo: https://github.com/RedHatInsights/cost-management-build
+  productId: Red Hat Cost Management
   description: >
     Cost Management is an application that provides users a view of their
     enterprise cost. Cost Management allows users to evaluate the cost on
@@ -227,6 +285,7 @@ cost-management:
       module: ./RootApp
     paths:
       - /cost-management
+      - /openshift/cost-management
     sub_apps:
       - id: ''
         title: Overview
@@ -291,19 +350,6 @@ cost-management:
   source_repo: https://github.com/project-koku-ui/
   mailing_list: cost-mgmt@redhat.com
 
-policies:
-  title: Policies
-  api:
-    versions:
-      - v1
-  channel: '#cloudservices-policies'
-  deployment_repo: https://github.com/RedHatInsights/policies-ui-frontend-build
-  frontend:
-    module: policies#./RootApp
-    paths:
-      - /insights/policies
-  source_repo: https://github.com/RedHatInsights/policies-ui-frontend
-
 dashboard:
   title: Dashboard
   channel: '#advisor'
@@ -331,7 +377,7 @@ docs:
   top_level: true
 
 drift:
-  title: Configuration Drift
+  title: Drift
   api:
     subItems:
       drift:
@@ -350,6 +396,7 @@ drift:
   frontend:
     module: drift#./RootApp
     title: Drift
+    section: operations
     paths:
       - /insights/drift
     sub_apps:
@@ -361,7 +408,8 @@ drift:
   source_repo: https://github.com/RedHatInsights/drift-frontend
 
 edge:
-  title: Edge for RHEL
+  title: RHEL for Edge
+  disabled_on_prod: true
   deployment_repo: https://github.com/RedHatInsights/edge-frontend-build
   source_repo: https://github.com/RedHatInsights/edge-frontend
   top_level: true
@@ -371,7 +419,7 @@ edge:
       scope: edge
       module: ./RootApp
       group: groups
-    title: Edge for RHEL
+    title: RHEL for Edge
     paths:
       - /edge
     sub_apps:
@@ -394,6 +442,7 @@ image-builder:
       - url: '/api/image-builder/v1/version'
         matcher: isNotEmpty
   frontend:
+    section: operations
     paths:
       - /insights/image-builder
   source_repo: https://github.com/osbuild/image-builder-frontend
@@ -407,21 +456,33 @@ ingress:
 insights:
   title: Insights
   frontend:
-    title: Red Hat Insights
+    title: Insights
     sub_apps:
       - id: dashboard
         default: true
       - id: advisor
-      - id: vulnerability
-      - id: compliance
-      - id: patch
       - id: drift
-      - id: policies
       - id: image-builder
       - id: inventory
-      - id: remediations
+      - id: vulnerability
+      - id: compliance
+      - id: policies
+      - id: patch
+      - id: subscriptions
+        section: business
+      - id: ros
       - id: registration
+      - id: remediations
   top_level: true
+
+internal:
+  title: Internal
+  top_level: true
+  frontend:
+    sub_apps:
+      - id: commit-tracker
+        default: true
+      - id: access-requests
 
 integrations:
   title: Integrations
@@ -449,6 +510,7 @@ inventory:
   frontend:
     module: inventory#./RootApp
     title: Inventory
+    section: operations
     paths:
       - /insights/inventory
   source_repo: https://github.com/RedHatInsights/insights-inventory-frontend
@@ -458,34 +520,31 @@ landing:
   deployment_repo: https://github.com/RedHatInsights/landing-page-frontend-build
   source_repo: https://github.com/RedHatInsights/landing-page-frontend
 
-migrations:
-  title: Migrations
+manifests:
+  title: Manifests
+  channel: '#subscription-central'
+  deployment_repo: https://github.com/RedHatInsights/subscription-central-ui-build
+  frontend:
+    module:
+      appName: manifests
+      scope: manifests
+      module: ./RootApp
+    paths:
+      - /insights/subscriptions/manifests
+    reload: subscriptions/manifests
+  source_repo: https://github.com/RedHatInsights/subscription-central-ui
+  
+mosaic:
+  title: Cloud Mosaic
   frontend:
     sub_apps:
-      - id: migration-analytics
-        default: true
+      - id: cloud-tutorials
   top_level: true
 
-migration-analytics:
-  title: Migration Analytics
-  api:
-    versions:
-      - v1
-    alias:
-      - xavier
-    tags:
-      - value: "experimental"
-        title: "Experimental API"
-  deployment_repo: https://github.com/RedHatInsights/xavier-ui-deploy
-  frontend:
-    paths:
-      - /migrations
-      - /migrations/migration-analytics
-  source_repo: https://github.com/project-xavier/xavier-ui
-
 my-user-access:
-  title: My user access
+  title: My User Access
   channel: '#platform-experience'
+  infoId: rbac
   frontend:
     module:
       appName: my-user-access
@@ -509,10 +568,13 @@ notifications:
     paths:
       - /settings/notifications
     sub_apps:
-      - id: insights
-        title: Red Hat Insights
+      - id: rhel
+        title: Red Hat Enterprise Linux
         group: notifications
         default: true
+      - id: openshift
+        title: OpenShift
+        group: notifications
   source_repo: https://github.com/RedHatInsights/notifications-frontend
 
 openshift:
@@ -521,35 +583,51 @@ openshift:
     versions:
       - v1
   deployment_repo: https://github.com/RedHatInsights/uhc-portal-frontend-deploy.git
+  productId: Red Hat Openshift Cluster Manager
   frontend:
-    title: Red Hat OpenShift Cluster Manager
+    title: OpenShift Cluster Manager
     paths:
       - /openshift
     sub_apps:
       - id: ''
-        title: Clusters
+        title: Cluster Management
         group: openshift
         default: true
       - id: subscriptions
         title: Subscriptions
-        group: openshift
-      - id: overview
-        title: Overview
-        group: openshift
-  source_repo:
+        section: insights
+        sub_apps:
+            - id: openshift-container
+              title: Container Platform
+            - id: openshift-quota
+              title: Dedicated (Annual)
+              reload: '../quota'
+            - id: openshift-dedicated
+              title: Dedicated (On-Demand)
+            - id: resource-limits
+              title: Dedicated (On-Demand limits)
+              reload: '../quota/resource-limits'
+            - id: rhel
+              title: RHEL Subscriptions
+              reload: '../../insights/subscriptions/rhel'
+      - id: cost-management
+
   top_level: true
 
 streams:
-  title: Streams for Apache Kafka
+  title: "Streams for Apache Kafka"
   frontend:
     sub_apps:
       - id: kafkas
-        title: Kafka Instances
+        title: "Kafka Instances"
         default: true
       - id: service-accounts
-        title: Service Accounts
+        title: "Service Accounts"
       - id: resources
-        title: Resources
+        title: "Resources"
+      - id: streams-docs
+        title: Documentation
+        navigate: https://access.redhat.com/documentation/en-us/red_hat_openshift_streams_for_apache_kafka/
 
 application-services:
   title: Application Services
@@ -558,20 +636,21 @@ application-services:
   deployment_repo: https://github.com/RedHatInsights/rhosak-dashboard-build
   frontend:
     title: Application Services
+    isBeta: true
     paths:
       - /application-services
     sub_apps:
       - id: overview
-        title: Overview
+        title: "Overview"
         default: true
         group: overview
       - id: streams
         group: overview
       - id: api-management
-        title: API Management
+        title: "API Management"
         group: overview
       - id: data-science
-        title: Data Science
+        title: "Data Science"
         group: overview
   top_level: true
   source_repo: https://github.com/bf2fc6cc711aee1a0c2a/mk-ui-host
@@ -600,6 +679,7 @@ patch:
   channel: '#team-patchman'
   deployment_repo: https://github.com/RedHatInsights/patchman-ui-build
   frontend:
+    section: security
     module: patch#./RootApp
     title: Patch
     paths:
@@ -619,6 +699,20 @@ playbook-dispatcher:
   api:
     versions:
       - v1
+
+policies:
+  title: Policies
+  api:
+    versions:
+      - v1
+  channel: '#cloudservices-policies'
+  deployment_repo: https://github.com/RedHatInsights/policies-ui-frontend-build
+  frontend:
+    module: policies#./RootApp
+    section: security
+    paths:
+      - /insights/policies
+  source_repo: https://github.com/RedHatInsights/policies-ui-frontend
 
 product:
   title: Product Documentation
@@ -644,7 +738,7 @@ rbac:
     method: isOrgAdmin
   frontend:
     module: rbac#./RootApp
-    title: User access
+    title: User Access
     paths:
       - /settings/rbac
     sub_apps:
@@ -656,6 +750,20 @@ rbac:
       - id: groups
         title: Groups
   source_repo: https://github.com/RedHatInsights/insights-rbac-ui
+
+connector:
+  title: Red Hat Connector
+  api:
+    versions:
+      - v1
+    apiName: config-manager
+  deployment_repo: https://github.com/RedHatInsights/sed-frontend-build
+  frontend:
+    title: Red Hat Connector
+    module: connector#./RootApp
+    paths:
+      - /settings/connector
+  source_repo: https://github.com/RedHatInsights/sed-frontend
 
 registration:
   title: Register Systems
@@ -680,21 +788,20 @@ remediations:
       - /insights/remediations
   source_repo: https://github.com/RedHatInsights/insights-remediations-frontend
 
-rhel-sw:
-  title: Red Hat Enterprise Linux
+ros:
+  title: Resource Optimization
+  api:
+    versions:
+      - v0
+  channel: '#team-ros'
+  deployment_repo: https://github.com/RedHatInsights/ros-frontend-build
   frontend:
-    sub_apps:
-      - id: all
-        title: All
-        default: true
-      - id: arm
-        title: ARM
-      - id: ibmpower
-        title: IBM Power
-      - id: ibmz
-        title: IBM Z systems
-      - id: x86
-        title: x86
+      module: ros#./RootApp
+      section: business
+      title: Resource Optimization
+      paths:
+          - /insights/ros
+  source_repo: https://github.com/RedHatInsights/ros-frontend
 
 ruledev:
   title: Rule Development
@@ -724,6 +831,9 @@ settings:
       - id: integrations
       - id: notifications
       - id: applications
+      - id: settings-documentation
+        title: Documentation
+        navigate: https://access.redhat.com/documentation/red_hat_cloud_platform/
 
 sources:
   title: Discovered Inventory
@@ -731,7 +841,7 @@ sources:
     versions:
       - v1
     isBeta: true
-  channel: '#insights_topology_svc'
+  channel: '#sources'
   deployment_repo: https://github.com/RedHatInsights/sources-ui-deploy
   frontend:
     title: Sources
@@ -744,9 +854,24 @@ staging:
   title: Staging Bundle
   frontend:
     sub_apps:
+      - id: starter
       - id: ruledev
       - id: policies
   top_level: true
+
+starter:
+  title: Starter
+  api:
+    versions:
+      - v1
+    apiName: insights
+  channel: '#forum-clouddot-ui'
+  deployment_repo: https://github.com/RedHatInsights/frontend-starter-app-build
+  frontend:
+    module: starter#./RootApp
+    paths:
+      - /staging/starter
+  source_repo: https://github.com/RedHatInsights/frontend-starter-app
 
 storybook:
   channel: '#flip-mode-squad'
@@ -757,25 +882,55 @@ storybook:
   source_repo: https://github.com/RedHatInsights/insights-frontend-storybook
 
 subscriptions:
-  title: Subscription Watch
+  title: Subscriptions
   api:
     versions:
       - v1
+    alias:
+      - rhsm-subscriptions
   channel: '#subscriptions'
   deployment_repo: https://github.com/RedHatInsights/curiosity-frontend-build
+  productId: Subscription Watch
   top_level: true
   frontend:
     paths:
       - /insights/subscriptions
-      - /subscriptions
+      - /openshift/subscriptions
+      - /openshift/quota
     sub_apps:
-      - id: rhel-sw
+      - id: rhel
+        title: All RHEL
         default: true
-        group: subscriptions
-      - id: openshift-sw
-        title: Red Hat OpenShift
-        group: subscriptions
+      - id: rhel-arm
+        title: ARM
+      - id: rhel-ibmpower
+        title: IBM Power
+      - id: rhel-ibmz
+        title: IBM Z systems
+      - id: rhel-x86
+        title: X86
+      - id: openshift-subscription
+        title: OpenShift Subscriptions
+        reload: '../openshift/subscriptions/openshift-container'
+      - id: manifests
+      - id: subscriptions-documentation
+        title: Subscriptions Documentation
+        navigate: https://access.redhat.com/products/subscription-central?extIdCarryOver=true&sc_cid=701f2000001Css5AAC
+      
+
+
   source_repo: https://github.com/RedHatInsights/curiosity-frontend
+
+topological-inventory:
+  title: Topological inventory
+  top_level: true
+  deployment_repo: https://github.com/RedHatInsights/topological-inventory-frontend-build
+  frontend:
+    title: Topological inventory
+    paths:
+      - /settings/topology
+      - /settings/topological-inventory
+  source_repo: https://github.com/RedHatInsights/topological-inventory-frontend
 
 trust:
   title: Insights security
@@ -788,22 +943,33 @@ trust:
   source_repo: https://github.com/RedHatInsights/trust-frontend
 
 user-preferences:
-  title: User preferences
+  title: User Preferences
   deployment_repo: https://github.com/RedHatInsights/user-preferences-frontend-build
   top_level: true
   frontend:
+    title: User Preferences
     module:
       appName: user-preferences
       scope: userPreferences
       module: ./RootApp
       group: email
-    title: User preferences
     paths:
       - /user-preferences
     sub_apps:
       - id: email
-        title: Email preferences
+        title: Email Preferences
         default: true
+        group: email
+      - id: notifications
+        title: Notifications
+        group: email
+        sub_apps:
+            - id: rhel
+              title: Red Hat Enterprise Linux
+              group: email
+            - id: openshift
+              title: Openshift
+              group: email
   source_repo: https://github.com/RedHatInsights/user-preferences-frontend
 
 vulnerability:
@@ -814,6 +980,7 @@ vulnerability:
   channel: '#team-vulnerability'
   deployment_repo: https://github.com/RedHatInsights/vulnerability-ui-build
   frontend:
+    section: security
     module: vulnerability#./RootApp
     title: Vulnerability
     paths:
