Re-add overview openshift navigation item (#512)

--- a/main.yml
+++ b/main.yml
@@ -578,6 +578,9 @@ openshift:
         title: Cluster Management
         group: openshift
         default: true
+      - id: overview
+        title: Overview
+        group: openshift
       - id: subscriptions
         title: Subscriptions
         section: insights
