--- a/main.yml
+++ b/main.yml
@@ -754,6 +754,8 @@ rbac:
         title: Roles
       - id: groups
         title: Groups
+      - id: access-requests
+        title: Red Hat Access Requests
   source_repo: https://github.com/RedHatInsights/insights-rbac-ui
 
 connector:
